// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders data 1`] = `
<div>
  <div>
    <div>
      <h3>
        r2d2
      </h3>
      <h6>
        luke
        : 
        newhope
      </h6>
    </div>
  </div>
</div>
`;

exports[`App renders error 1`] = `
<div>
  <h1>
    ERROR
  </h1>
</div>
`;

exports[`App renders loading 1`] = `
<div>
  <div>
    Loading
  </div>
</div>
`;
